# ClonEpub-Pocket

./: .gitignore  README.md  generate_bg.py  pyproject.toml  round_icon.py
.agent/: rules.md
.agent/workflows/: run-clonepub.md
clonepub/: __init__.py  api.py  core.py  main.py  models.py  server.py
clonepub/ui/: app.js  index.html  styles.css
docs/: ELECTRON_DISTRIBUTION_SOP.md
electron/: forge.config.ts  package-lock.json  package.json
electron/assets/: icon.icns  setup.html
electron/src/: main.ts  preload.ts
testing/: edgetest - Jack Johnson.epub  test_generation.py  test_integration.py  testing epub - john appleseed.epub  verify_pocket.py
